# MalFunc

./: .gitignore  IDS_THEORY_FINAL_REPORT (1).docx  IDS_THEORY_FINAL_REPORT.docx  MalFunc_Project_Documentation.docx  README.md  project_docs.md  pyproject.toml  ~$lFunc_Project_Documentation.docx
malfunc/: __init__.py  module1.py  ops.py  tests.py  utils.py
