[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "malfunc"
version = "0.1.0"
authors = [
  { name="Faizan Toheed", email="faizantoheed456@gmail.com" },
]
description = "malfunc contains everyday functions customized for easier use, wrapped up neatly into a reusable library."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dominator959/MalFunc"